# ChangeLog for x11-apps/mkfontdir
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/x11-apps/mkfontdir/ChangeLog,v 1.28 2006/10/10 23:55:18 dberkholz Exp $

  10 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>;
  mkfontdir-1.0.2.ebuild:
  Update description to be less generic.

  19 Jul 2006; Guy Martin <gmsoft@gentoo.org> mkfontdir-1.0.2.ebuild:
  Stable on hppa.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> mkfontdir-1.0.2.ebuild:
  Mark 1.0.2 stable on ia64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  mkfontdir-1.0.2.ebuild:
  ppc/sparc/mips/alpha/arm/sh stable

  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  mkfontdir-1.0.2.ebuild:
  Stable on amd64.

  30 Jun 2006; Markus Rothe <corsair@gentoo.org> mkfontdir-1.0.2.ebuild:
  Stable on ppc64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  mkfontdir-1.0.2.ebuild:
  x86 stable.

  27 Apr 2006; Alec Warner <antarus@gentoo.org> Manifest:
  Fixing SHA256 digest, pass four

  08 Apr 2006; Donnie Berkholz <spyderous@gentoo.org>;
  -mkfontdir-1.0.1.ebuild:
  Pull old ebuild.

*mkfontdir-1.0.2 (04 Apr 2006)

  04 Apr 2006; Donnie Berkholz <spyderous@gentoo.org>;
  +mkfontdir-1.0.2.ebuild:
  Build fix for BSD.

  31 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> mkfontdir-1.0.1.ebuild:
  Add ~x86-fbsd keyword.

  09 Mar 2006; Aron Griffis <agriffis@gentoo.org> mkfontdir-1.0.1.ebuild:
  Mark 1.0.1 ~ia64

  14 Feb 2006; Markus Rothe <corsair@gentoo.org> mkfontdir-1.0.1.ebuild:
  Added ~ppc64

  31 Jan 2006; Rene Nussbaumer <killerfox@gentoo.org>
  mkfontdir-1.0.1.ebuild:
  Unstable on hppa.

  26 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  -mkfontdir-0.99.2.ebuild, -mkfontdir-1.0.0.ebuild:
  Pull old versions.

  26 Dec 2005; Stefaan De Roeck <stefaan@gentoo.org> mkfontdir-1.0.1.ebuild:
  Marked ~alpha

*mkfontdir-1.0.1 (23 Dec 2005)

  23 Dec 2005; Donnie Berkholz <spyderous@gentoo.org>;