@@ -1,12 +1,17 @@
 DIST mkfontdir-1.0.2.tar.bz2 61745 RMD160 69296350311aa149e675c2eca19bf483804f9aec SHA1 f7e243cd26bacb9c5000eaf1595bb6c7b8bafb14 SHA256 06055b7e4d03661b987d48ff1a1e1e21c256431141d0f7fb8e4cceefce77b4b7
+DIST mkfontdir-1.0.3.tar.bz2 62898 RMD160 707df69cf0b3197e88b87003bef5b389b0e9cb1e SHA1 cb0afde150af5957d67f921673dbaed3402978d1 SHA256 2a786e03611a53c7f6263db446c0c9ef76e94bcf930b0b5867cc6a9c19653074
 EBUILD mkfontdir-1.0.2.ebuild 513 RMD160 bfd2178e82d2d5c495564d96265d3134a3dd5369 SHA1 0a4066137679d1948706bf05668c53a37c46e902 SHA256 f965d80069648121e3aea04ed91eabf8bd1737328c8ae32bf09c3aa8dc4a6fa9
 MD5 1f6a387723aad8124beca55542f88e6b mkfontdir-1.0.2.ebuild 513
 RMD160 bfd2178e82d2d5c495564d96265d3134a3dd5369 mkfontdir-1.0.2.ebuild 513
 SHA256 f965d80069648121e3aea04ed91eabf8bd1737328c8ae32bf09c3aa8dc4a6fa9 mkfontdir-1.0.2.ebuild 513
-MISC ChangeLog 3303 RMD160 f2042fcc9070a10736cf86de17fa9e615a89506f SHA1 e4efb62f1025ab320d86da6cbb09bb39bbebd10f SHA256 5fe22c7d1e638b027ef6cc3f339565c5b03aeec4ee8a68fa436d6b29c911f314
-MD5 31e7eda9f17aa4c40c9c5d6b42e58236 ChangeLog 3303
-RMD160 f2042fcc9070a10736cf86de17fa9e615a89506f ChangeLog 3303
-SHA256 5fe22c7d1e638b027ef6cc3f339565c5b03aeec4ee8a68fa436d6b29c911f314 ChangeLog 3303
+EBUILD mkfontdir-1.0.3.ebuild 507 RMD160 6c87915d6fe9294a0979717ad56e7d1dd45bf42d SHA1 3c3708588e67c8305b963af2f7b3f9eb1000a3cf SHA256 97d64c10b9ef894fd753dfdc80acf1edaf3673162ea3cd3721961f64ca123a1d
+MD5 e0e58c0812baef3772544d52773300f6 mkfontdir-1.0.3.ebuild 507
+RMD160 6c87915d6fe9294a0979717ad56e7d1dd45bf42d mkfontdir-1.0.3.ebuild 507
+SHA256 97d64c10b9ef894fd753dfdc80acf1edaf3673162ea3cd3721961f64ca123a1d mkfontdir-1.0.3.ebuild 507
+MISC ChangeLog 3462 RMD160 b172342db08379450b640c3e17fe6adc6a368258 SHA1 f688ed47aec3c37868ab787c600f8d274999b590 SHA256 7797a47ed798cc841c3c62e6a0d8c4c6cefa409271efd8edc7294ede7130cc8f
+MD5 1a814179300713cbbcd124b3bc2ea0f7 ChangeLog 3462
+RMD160 b172342db08379450b640c3e17fe6adc6a368258 ChangeLog 3462
+SHA256 7797a47ed798cc841c3c62e6a0d8c4c6cefa409271efd8edc7294ede7130cc8f ChangeLog 3462
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
 MD5 a37bab73e2f24b213932c30997d3d360 metadata.xml 156
 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 metadata.xml 156
@@ -14,3 +19,6 @@ SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055 metadata
 MD5 0fda62a2950d4a16a3257d3855a802ba files/digest-mkfontdir-1.0.2 247
 RMD160 16b12696d555f2de403e6eb228cebcf3f46c9cc9 files/digest-mkfontdir-1.0.2 247
 SHA256 697c8b37679070cbdba5586f71d340a553f2511110423b5acfae9b8f2fa370c3 files/digest-mkfontdir-1.0.2 247
+MD5 2b051ecd1e69adcba0733c6fa0fb93dd files/digest-mkfontdir-1.0.3 247
+RMD160 db138a2b98bc58281339859488e84d302ca0012f files/digest-mkfontdir-1.0.3 247
+SHA256 e87ed25abf9eb42925385ca0710ff52825781d7852b28a9c57b5384310e83b22 files/digest-mkfontdir-1.0.3 247
