@@ -1,0 +1,3 @@
+MD5 4d0f89a23f77e22f1671a77bf0898955 mkfontdir-1.0.3.tar.bz2 62898
+RMD160 707df69cf0b3197e88b87003bef5b389b0e9cb1e mkfontdir-1.0.3.tar.bz2 62898
+SHA256 2a786e03611a53c7f6263db446c0c9ef76e94bcf930b0b5867cc6a9c19653074 mkfontdir-1.0.3.tar.bz2 62898
