@@ -1,0 +1,17 @@
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/mkfontdir/mkfontdir-1.0.3.ebuild,v 1.1 2007/03/31 14:43:30 joshuabaergen Exp $
+
+EAPI="prefix"
+
+# Must be before x-modular eclass is inherited
+#SNAPSHOT="yes"
+
+inherit x-modular
+
+DESCRIPTION="create an index of X font files in a directory"
+
+KEYWORDS="~amd64 ~ia64 ~ppc-macos ~x86 ~x86-macos ~x86-solaris"
+
+RDEPEND="x11-apps/mkfontscale"
+DEPEND="${RDEPEND}"
