@@ -1,6 +1,12 @@
 # ChangeLog for x11-apps/mkfontdir
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/x11-apps/mkfontdir/ChangeLog,v 1.28 2006/10/10 23:55:18 dberkholz Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/mkfontdir/ChangeLog,v 1.29 2007/03/31 14:43:30 joshuabaergen Exp $
+
+*mkfontdir-1.0.3 (31 Mar 2007)
+
+  31 Mar 2007; Joshua Baergen <joshuabaergen@gentoo.org>
+  +mkfontdir-1.0.3.ebuild:
+  Version bump.  Fixes manpage locations for some platforms.
 
   10 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>;
   mkfontdir-1.0.2.ebuild:
